Comment out USDT to NEAR Pool Balance section in DCA template

--- a/templates/dca.html
+++ b/templates/dca.html
@@ -40,9 +40,9 @@
         <div class="col-md-6">
             <p class="text-muted mb-4">NEAR to USDT Pool Balance: <span id="contract-balance">Loading...</span> NEAR</p>
         </div>
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
             <p class="text-muted mb-4">USDT to NEAR Pool Balance: <span id="contract-balance-usdt">Loading...</span> USDT</p>
-        </div>
+        </div> -->
     </div>
 
     <!-- NEAR to USDT Investment Dashboard Section -->
