Refactor DCA template to include USDT module scripts; enhance base64 decoding to support Borsh format and add USDT balance checking functionality

--- a/templates/dca.html
+++ b/templates/dca.html
@@ -390,6 +390,10 @@
 <!-- Application Scripts -->
 <script src="{{ url_for('static', filename='js/near-wallet.js') }}" type="module"></script>
 <script src="{{ url_for('static', filename='js/dca.js') }}" type="module"></script>
-<script src="{{ url_for('static', filename='js/dca-usdt.js') }}" type="module"></script>
 <script src="{{ url_for('static', filename='js/dca-registration.js') }}" type="module"></script>
+
+<!-- USDT Module Scripts -->
+<script src="{{ url_for('static', filename='js/usdt/usdt-balance.js') }}" type="module"></script>
+<script src="{{ url_for('static', filename='js/usdt/usdt-dca.js') }}" type="module"></script>
+<script src="{{ url_for('static', filename='js/usdt/usdt-dashboard.js') }}" type="module"></script>
 {% endblock %}
