change swap interval

--- a/templates/dca.html
+++ b/templates/dca.html
@@ -211,7 +211,7 @@
                     <select class="dca-form-select mb-2" id="new_interval_usdt" required>
                         <!-- Options will be populated by interval-options.js -->
                     </select>
-                    <button onclick="changeUsdtSwapInterval()" class="dca-btn dca-btn-primary">
+                    <button onclick="changeSwapInterval()" class="dca-btn dca-btn-primary">
                         <i class="fas fa-clock"></i> Update Interval
                     </button>
                 </div>
